# aptp-assignment-main

aptp-assignment-main/: README.md
aptp-assignment-main/assignments/problem1/: README.md  problem.pddl  problem.plan
aptp-assignment-main/assignments/problem2/: problem.plan
aptp-assignment-main/assignments/problem3/: README.md  problem.hddl
aptp-assignment-main/assignments/problem4/: README.md  domain.pddl  problem.pddl
aptp-assignment-main/assignments/problem5/: README.md
aptp-assignment-main/assignments/problem5/plansys2_assignment/launch/: commands.txt  plansys2_assignment_launch.py
aptp-assignment-main/assignments/problem5/plansys2_assignment/pddl/: domain.pddl
aptp-assignment-main/assignments/problem5/plansys2_assignment/src/: check_safe_action_node.cpp  continue_empty_action_node.cpp  start_empty_action_node.cpp
assignments/problem1/: domain.pddl
assignments/problem2/: README.md  domain.pddl  problem.pddl
assignments/problem3/: domain.hddl  problem.plan
assignments/problem4/: problem.plan
assignments/problem5/plansys2_assignment/: CMakeLists.txt
assignments/problem5/plansys2_assignment/plan_media/: terminal.txt
assignments/problem5/plansys2_assignment/src/: check_empty_action_node.cpp  deliver_action_node.cpp  fill_action_node.cpp  move_action_node.cpp  pickup_action_node.cpp
